sql/handler.h
@@ -5322,4 +5322,8 @@ bool non_existing_table_error(int error);
 
 int get_select_field_pos(Alter_info *alter_info, int select_field_count,
                          bool versioned);
+
+#ifndef DBUG_OFF
+const char* dbug_print_row(TABLE *table, const uchar *rec, bool print_names= true);
+#endif /* DBUG_OFF */
 #endif /* HANDLER_INCLUDED */
